# ota_ws_update

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README-RU.md  README.md  idf_component.yml__  sdkconfig  sdkconfig.old
esp_encrypted_img/: idf_component.yml
example_ota_ws/: CMakeLists.txt  partitions.csv
example_ota_ws/main/: CMakeLists.txt  example_echo_ws_server.c  example_echo_ws_server.html  example_ota_ws_update.c
include/: ota_ws.h  ota_ws_update.h
main/: CMakeLists.txt  example_ota_ws.c  ota_ws.c
private_include/: ota_ws_private.h  ota_ws_update_private.h
rsa_key/: private.pem  private_rsa_3072.pem
source/: ota_esp.c  ota_ws.c  ota_ws.html  ota_ws_esp.c  ota_ws_http.c  ota_ws_update.html  ota_ws_update_.html  ota_ws_update_esp.c  ota_ws_update_esp_preencrypted.c  ota_ws_update_http.c  ota_ws_update_http_new.html
