idf_component_register(
                    SRCS 
                      source/ota_ws_update_esp.c
                      source/ota_ws_update_http.c 
                    INCLUDE_DIRS 
                      include
                    PRIV_INCLUDE_DIRS
                      private_include
                    REQUIRES
                      esp_http_server
                      app_update
                      #esp_wifi
                    EMBED_FILES 
                      source/ota_ws_update.html
)